Fixed a few bugs

--- a/Digit-Classifier/Digit-Classifier-Binary.ipynb
+++ b/Digit-Classifier/Digit-Classifier-Binary.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Digit Classifier:\n",
+    "This is an extension of the 'Simple Neural Network' which mimics the XOR gate. You can find that in the directory which goes by the same name.\n",
+    "\n",
     "---\n",
     "## Data:\n",
     "The MNIST database of handwritten digits with 784 features, raw data available at: [http://yann.lecun.com/exdb/mnist/](http://yann.lecun.com/exdb/mnist/). It can be split in a training set of the first 60,000 examples, and a test set of 10,000 examples.  \n",
@@ -266,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -292,6 +294,9 @@
    ],
    "source": [
     "# TESTING:\n",
+    "\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
     "Z1 = np.matmul(W1, X_test) + b1\n",
     "A1 = sigmoid(Z1)\n",
     "\n",
@@ -304,6 +309,13 @@
     "print(\"Confusion matrix: \\n\", confusion_matrix(predictions, labels), \"\\n\")\n",
     "print(\"Classification report: \\n\", classification_report(predictions, labels))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
